# apitally-py

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .tool-versions  AGENTS.md  LICENSE  MIGRATION.md  Makefile  README.md  pyproject.toml  renovate.json
.github/workflows/: publish.yaml  summary.yaml  tests.yaml
.zed/: settings.json
apitally/: __init__.py  blacksheep.py  client.py  common.py  django.py  django_ninja.py  django_rest_framework.py  fastapi.py  flask.py  litestar.py  otel.py  starlette.py
apitally/client/: asyncio.py  base.py  client_asyncio.py  client_base.py  client_threading.py  consumers.py  instance.py  logging.py  request_logging.py  requests.py  resources.py  sentry.py  server_errors.py  spans.py  threading.py  utils.py  validation_errors.py
apitally/shared/: activation.py  asgi.py  capture.py  config.py  consumer.py  context.py  export.py  exporter.py  helpers.py  log_processor.py  metrics.py  providers.py  redaction.py  sentry.py  span_processor.py  spool.py  startup.py  wsgi.py
notebooks/: flask.ipynb
starlette_apitally/: __init__.py  api.py  app_info.py  client.py  fastapi.py  keys.py  metrics.py  middleware.py  requests.py  schema.py  sender.py  starlette.py
tests/: conftest.py  constants.py  django_ninja_urls.py  django_rest_framework_urls.py  django_settings.py  django_urls.py  django_utils.py  test_activation.py  test_app_info.py  test_asgi_transport.py  test_blacksheep.py  test_client.py  test_client_asyncio.py  test_client_base.py  test_client_consumers.py  test_client_instance.py  test_client_logging.py  test_client_request_logging.py  test_client_requests.py  test_client_resources.py  test_client_sentry.py  test_client_server_errors.py  test_client_spans.py  test_client_threading.py  test_client_validation_errors.py  test_config.py  test_django.py  test_django_ninja.py  test_django_rest_framework.py  test_drf_spectacular.py  test_fastapi.py  test_flask.py  test_fork.py  test_import.py  test_init.py  test_keys.py  test_litestar.py  test_logs.py  test_metrics.py  test_middleware.py  (+11 more)
tests/django/: ninja_urls.py  rest_framework_urls.py  settings.py  urls.py  utils.py
tests/django_app/: urls.py
tests/shared/: test_activation.py  test_asgi.py  test_config.py  test_consumer.py  test_export.py  test_exporter.py  test_helpers.py  test_log_processor.py  test_metrics.py  test_providers.py  test_redaction.py  test_sentry.py  test_span_processor.py  test_spool.py  test_startup.py  test_wsgi.py
v1/: buffering.md  design.md  export.md  litestar.md  plan.md  review-1.md  review-2.md  review.md  risks.md  sampling.md  spec.md  wsgi.md
