[project]
name = "apitally"
description = "Simple API monitoring & analytics for REST APIs built with FastAPI, Flask, Django, Starlette, Litestar and BlackSheep."
authors = [{ name = "Apitally", email = "hello@apitally.io" }]
readme = "README.md"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Topic :: Software Development",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "backoff>=2.0.0",
    "opentelemetry-sdk>=1.39.1,<2.0.0",
    "psutil>=5.9.6",
    "typing-extensions>=4.0.0; python_version<'3.11'",
]
dynamic = ["version"]

[project.optional-dependencies]
blacksheep = ["blacksheep>=2", "httpx>=0.22.0"]
django_ninja = [
    "django>=2.2,<5; python_version<'3.10'",
    "django>=2.2; python_version>='3.10'",
    "django-ninja>=1.0.0",
    "requests>=2.26.0",
]
django_rest_framework = [
    "django>=2.2,<5; python_version<'3.10'",
    "django>=2.2; python_version>='3.10'",
    "djangorestframework>=3.10.0",
    "uritemplate>=3.0.0",                    # required for schema generation
    "inflection>=0.5.1",                     # required for schema generation
    "requests>=2.26.0",
]
fastapi = ["fastapi>=0.94.1", "starlette>=0.26.1,<1.0.0", "httpx>=0.22.0"]
flask = ["flask>=2.0.0", "requests>=2.26.0"]
litestar = ["litestar>=2.4.0", "httpx>=0.22.0"]
starlette = ["starlette>=0.26.1,<1.0.0", "httpx>=0.22.0"]

[project.urls]
Homepage = "https://apitally.io"
Documentation = "https://docs.apitally.io"
Repository = "https://github.com/apitally/apitally-py"

[dependency-groups]
dev = [
    "mypy~=1.19.0",
    "pre-commit==4.3.0; python_version<'3.10'",
    "pre-commit>=4.5.0; python_version>='3.10'",
    "ruff~=0.14.0",
]
test = [
    "blacksheep[full]",
    "loguru",
    "pytest~=8.4.0",
    "pytest-asyncio~=0.21.2",
    "pytest-cov~=7.0.0",
    "pytest-httpx~=0.33.0",
    "pytest-mock~=3.15.0",
    "requests-mock~=1.12.1",
]
types = [
    "django-types",
    "djangorestframework-types",
    "types-colorama",
    "types-docutils",
    "types-gevent",
    "types-pexpect",
    "types-psutil",
    "types-pygments",
    "types-pysocks",
    "types-pyyaml",
    "types-requests",
    "types-setuptools",
    "types-six",
    "types-ujson",
]
otel = [
    "opentelemetry-api",
    "opentelemetry-instrumentation-asyncpg",
    "opentelemetry-instrumentation-botocore",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-mysql",
    "opentelemetry-instrumentation-psycopg",
    "opentelemetry-instrumentation-psycopg2",
    "opentelemetry-instrumentation-pymongo",
    "opentelemetry-instrumentation-redis",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-sqlalchemy",
]
sentry = ["sentry-sdk>=2.2.0"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv]
default-groups = ["dev", "test", "types"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["apitally"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]
